--- a/gui.ini
+++ b/gui.ini
@@ -1,531 +1,548 @@
 [General]
+text=255
+value=255
 HWP_stepper_angle=358
-text=0
-value=0
-
-[DAQmx_shift]
-text="0,00"
-value=12
-
-[HWP_move_to_angle]
-text="10,0000"
-value=10
-
-[HWP_rel_step]
-text="1,00"
-value=1
-
-[HWP_stepper_MoveTo]
-text="0,00"
-value=10
-
-[HWP_stepper_step]
-text="0,00"
-value=0
-
-[HWP_stepper_wait]
-checked=true
-text=WaitUntilReady
-
-[Pi_Velocity]
-text="0,00"
-value=10000
-
-[Pi_X_On]
-checked=true
-text=X
-
-[Pi_X_move_to]
-text="0,00"
-value=50
-
-[Pi_Y_On]
-checked=true
-text=Y
-
-[Pi_Y_move_to]
-text="0,00"
-value=50
-
-[Pi_Z_On]
-checked=true
-text=Z
-
-[Pi_Z_move_to]
-text="15,000"
-value=15
-
-[Pi_wait]
-checked=true
-text=Wait
-
-[Scan3D_min_distance]
-text=1
-value=1
-
-[andorCameraExposure]
-text="1,00000"
-value=1
-
-[andorCameraLive]
-checked=false
-text=L&ive
-
-[andorCameraReadoutMode]
 currentIndex=0
-
-[autoAlphaCheck]
-checked=false
-text=Auto
-
-[autoDownsampleCheck]
-checked=true
-text=Auto
 
 [autoPanCheck]
-checked=false
 text=Auto Pan Only
+checked=false
 
-[autoPercentSpin]
+[normYBlurSpin]
 text="0,00"
-value=100
+value=0
+
+[qt_spinbox_lineedit]
+text=850x
+
+[visibleOnlyCheck]
+text=Visible Data Only
+checked=false
+
+[autoDownsampleCheck]
+text=Auto
+checked=true
 
 [autoPointsCheck]
-checked=true
 text=Auto
+checked=true
 
-[calibr_end]
-text="360,00"
-value=360
+[minText]
+text=14.062
 
-[calibr_start]
-text="0,00"
-value=0
-
-[calibr_step]
-text="0,00"
-value=1
-
-[calibr_wavelength_end]
-text=1300
-value=1300
-
-[calibr_wavelength_start]
-text=850
-value=850
-
-[calibr_wavelength_step]
+[pico_n_captures]
 text=1
-value=1
-
-[clipToViewCheck]
-checked=false
-text=Clip to View
-
-[confParam_scan_end]
-text="50,00"
-value=50
-
-[confParam_scan_start]
-text="0,00"
-value=0
-
-[confParam_scan_step]
-text="0,100"
-value=0.1
-
-[downsampleCheck]
-checked=false
-text=Downsample
-
-[downsampleSpin]
-text=1x
-value=1
-
-[fastScan_pattern]
-currentIndex=0
-
-[fastScan_time_calibr]
-text="1,0000000000"
 value=1
 
 [fastScan_time_cutoff]
 text="0,0000000000"
 value=0
 
-[fastScan_time_delay]
-text="0,0000000000"
-value=0
+[autoPercentSpin]
+text=100%
+value=100
 
-[fftCheck]
-checked=false
-text=Power Spectrum (FFT)
+[yGridCheck]
+text=Show Y Grid
+checked=true
 
-[forgetTracesCheck]
+[autoAlphaCheck]
+text=Auto
 checked=false
-text=Forget hidden traces
+
+[maxText]
+text=37.901
 
 [invertCheck]
-checked=false
 text=Invert Axis
-
-[laserPower_internal]
-text="0,01"
-value=0.01
-
-[laserShutter]
 checked=false
-text=Shutter
 
-[laserWavelength]
-text=1064
-value=1064
+[andorCameraExposure]
+text="1,00000"
+value=1
+
+[downsampleCheck]
+text=Downsample
+checked=false
+
+[downsampleSpin]
+text=1x
+value=1
+
+[shamrockWavelength_to_set]
+text="400,00"
+value=400
+
+[forgetTracesCheck]
+text=Forget hidden traces
+checked=false
+
+[mouseCheck]
+text=Mouse Enabled
+checked=true
 
 [laserWavelength_ready]
-checked=true
 text=ready
-
-[laserWavelength_to_set]
-text="0,00"
-value=1064
+checked=true
 
 [linkCombo]
 currentIndex=0
 
-[logXCheck]
-checked=false
-text=Log X
-
-[logYCheck]
-checked=false
-text=Log Y
-
-[maxText]
-text=0.081136
-
-[maxTracesCheck]
-checked=false
-text=Max Traces:
-
-[maxTracesSpin]
-text=0
-value=0
-
-[meas_laser_spectra_end]
-text=1300
-value=1300
-
-[meas_laser_spectra_start]
-text="0,00"
-value=850
-
-[meas_laser_spectra_step]
-text="0,00"
-value=1
-
-[meas_laser_spectra_track]
-checked=false
-text=track
-
-[meas_laser_spectra_track_channel]
-currentIndex=0
-
-[meas_laser_spectra_track_fast]
-checked=false
-text=Fast
-
-[minText]
-text=0
-
-[mocoMoveAbs_target]
-text=0
-value=0
-
-[mocoPosition]
-text=1450078
-value=1450078
-
-[mocoSection]
-currentIndex=3
-
-[mouseCheck]
-checked=true
-text=Mouse Enabled
-
-[n_meas_laser_spectra_FloatingWindow]
-checked=true
-text=Floatin&gWindow
-
-[n_meas_laser_spectra_MOCO_PMT]
-checked=true
-text=MOCO_PMT
-
-[n_meas_laser_spectra_Path]
-text=./data/multiScan
-
-[n_meas_laser_spectra_Z_end]
-text="0,00"
-value=45
-
-[n_meas_laser_spectra_Z_interface]
-text="33,2184"
-value=33.2184
-
-[n_meas_laser_spectra_Z_interface_fit]
-checked=true
-text=f&it
-
-[n_meas_laser_spectra_Z_interface_optim]
-checked=true
-text=&optimZ
-
-[n_meas_laser_spectra_Z_offset]
-text="-0,10"
-value=-0.1
-
-[n_meas_laser_spectra_Z_start]
-text="0,00"
-value=15
-
-[n_meas_laser_spectra_Z_step]
-text="0,30"
-value=0.3
-
-[n_meas_laser_spectra_end]
-text=1200
-value=1200
-
-[n_meas_laser_spectra_start]
-text="0,00"
-value=950
-
-[n_meas_laser_spectra_step]
-text=5
-value=5
-
-[n_meas_laser_spectra_track]
-checked=true
-text=&track
-
-[n_meas_laser_spectra_track_channel]
-currentIndex=2
-
-[n_meas_laser_spectra_track_fast]
-checked=false
-text=F&ast
-
 [normFrameCheck]
-checked=false
 text=Frame
-
-[normROICheck]
 checked=false
-text=ROI
-
-[normTBlurSpin]
-text="0,00"
-value=0
-
-[normTimeRangeCheck]
-checked=false
-text=Time range
-
-[normXBlurSpin]
-text="0,00"
-value=0
-
-[normYBlurSpin]
-text="0,00"
-value=0
-
-[pico_AutoRange]
-checked=true
-text=Auto Level:
-
-[pico_AutoRange_max]
-text=-20000
-value=-20000
-
-[pico_AutoRange_min]
-text=-200
-value=-200
-
-[pico_ChA_VRange]
-currentIndex=4
-
-[pico_ChA_offset]
-text="0,00"
-value=0
-
-[pico_ChB_VRange]
-currentIndex=4
-
-[pico_ChB_offset]
-text="0,00"
-value=0
-
-[pico_TrigSource]
-currentIndex=2
-
-[pico_TrigThreshold]
-text="0,00"
-value=-0.33
-
-[pico_Trig_mode]
-currentIndex=0
-
-[pico_n_captures]
-text=10
-value=10
-
-[pico_photon_counter]
-checked=false
-text=PC
-
-[pico_photon_counter_threshold]
-text=-0.001
-
-[pico_pretrig]
-text=0.0004
-
-[pico_sampleInterval]
-text=0.000001
-
-[pico_samplingDuration]
-text=0.007
-
-[pm100Average]
-text=100
-value=100
-
-[pm100Live]
-checked=false
-text=Live
-
-[qt_spinbox_lineedit]
-text="0,00"
-
-[raw_data_preview]
-checked=false
-text=&preview
-
-[readoutSources]
-currentIndex=0
-
-[rotPiezoStage_Step]
-text="0,00"
-value=10
-
-[rotPiezoStage_wait]
-checked=false
-text=WaitUntilReady
-
-[scan1D_axis]
-currentIndex=4
-
-[scan1D_end]
-text="360,00"
-value=360
-
-[scan1D_filePath]
-text=D:/microV/data/May2218/ZnO20nmEth/scan1D-np3-polar
-
-[scan1D_start]
-text="0,00"
-value=0
-
-[scan1D_step]
-text="0,00"
-value=2
-
-[scan3D_byMask]
-checked=false
-text=mas&kScan
-
-[scan3D_maskSigma]
-text="0,00"
-value=6
-
-[scan3D_maskStep]
-text="0,00"
-value=2
-
-[scan3D_maskThreshold]
-text="1,000"
-value=1
-
-[scan3D_num_peaks]
-text="0,00"
-value=2
-
-[scan3D_path]
-text=./data/scan
-
-[scan3D_threshold_rel]
-text="0,10"
-value=0.1
-
-[scanPolar_angle]
-text="360,00"
-value=360
-
-[shamrockGrating]
-currentIndex=0
-
-[shamrockPort]
-currentIndex=0
-
-[shamrockWavelength]
-text=491.66668701171875
 
 [shamrockWavelengthShift]
 text="0,00"
 value=0
 
-[shamrockWavelength_to_set]
-text="260,00"
-value=260
+[Pi_X_move_to]
+text="50,000"
+value=50
+
+[scan3D_maskStep]
+text=2
+value=2
+
+[usbSpectr_integr_time]
+text="0,010"
+value=0.01
+
+[usbSpectr_save_to]
+text=850
+value=3648
+
+[shamrockGrating]
+currentIndex=0
+
+[clipToViewCheck]
+text=Clip to View
+checked=false
+
+[laserWavelength]
+text=975
+value=975
+
+[pico_samplingDuration]
+text=100e-6
+
+[logXCheck]
+text=Log X
+checked=false
+
+[maxTracesCheck]
+text=Max Traces:
+checked=false
+
+[pico_TrigSource]
+currentIndex=0
+
+[maxTracesSpin]
+text=0
+value=0
+
+[logYCheck]
+text=Log Y
+checked=false
+
+[fftCheck]
+text=Power Spectrum (FFT)
+checked=false
+
+[calibr_start]
+text="0,00"
+value=0
+
+[n_meas_laser_spectra_step]
+text=850
+value=5
+
+[Pi_Y_move_to]
+text="50,000"
+value=50
+
+[HWP_rel_step]
+text="5,00"
+value=5
+
+[xGridCheck]
+text=Show X Grid
+checked=true
+
+[mocoMoveAbs_target]
+text=0
+value=0
+
+[Pi_X_On]
+text=X
+checked=true
+
+[normTBlurSpin]
+text="0,00"
+value=0
+
+[n_meas_laser_spectra_FloatingWindow]
+text=FloatingWindow
+checked=true
+
+[scan1D_axis]
+currentIndex=2
+
+[meas_laser_spectra_end]
+text=1200
+value=1200
+
+[pico_Trig_mode]
+currentIndex=0
+
+[shamrockWavelength]
+text=400.0
+
+[scan3D_threshold_rel]
+text="0,0500"
+value=0.05
+
+[confParam_scan_end]
+text="38,00"
+value=38
+
+[Pi_Y_On]
+text=Y
+checked=true
+
+[calibr_step]
+text="1,000"
+value=1
+
+[n_meas_laser_spectra_start]
+text=850
+value=930
+
+[pico_ChA_offset]
+text="0,00"
+value=0
+
+[normTimeRangeCheck]
+text=Time range
+checked=false
+
+[fastScan_pattern]
+currentIndex=0
+
+[meas_laser_spectra_start]
+text=900
+value=900
+
+[pico_ChB_VRange]
+currentIndex=5
+
+[scanPolar_angle]
+text="360,00"
+value=360
+
+[usbSpectr_from]
+text=850
+value=1400
+
+[pm100Live]
+text=Live
+checked=false
+
+[HWP_stepper_step]
+text=850
+value=0
+
+[usbSpectr_save_from]
+text=0
+value=0
+
+[normROICheck]
+text=ROI
+checked=false
+
+[rotPiezoStage_Step]
+text="10,00"
+value=10
+
+[rotPiezoStage_wait]
+text=WaitUntilReady
+checked=false
+
+[n_meas_laser_spectra_MOCO_PMT]
+text=MOCO_PMT
+checked=true
+
+[calibr_wavelength_step]
+text=10
+value=10
+
+[scan1D_filePath]
+text=./data/scan1D
+
+[confParam_scan_step]
+text="1,000"
+value=1
+
+[scan3D_path]
+text=./data/scan
+
+[n_meas_laser_spectra_Path]
+text=./data/multiScan
+
+[pico_ChB_offset]
+text="0,00"
+value=0
+
+[pico_AutoRange_min]
+text=-200
+value=-200
+
+[n_meas_laser_spectra_Z_step]
+text=850
+value=0.3
+
+[scan1D_start]
+text="15,00"
+value=15
+
+[HWP_stepper_MoveTo]
+text="10,00"
+value=10
+
+[n_meas_laser_spectra_track_channel]
+currentIndex=1
+
+[n_meas_laser_spectra_Z_interface]
+text="30,4567"
+value=30.4567
+
+[pico_sampleInterval]
+text=2e-9
 
 [shamrock_MOCO_limit]
-text="0,00"
-value=200
+text="320,00"
+value=320
 
-[shamrock_use_MOCO]
-checked=false
-text=C&hangeFilterAt
+[usbSpectr_to]
+text=850
+value=1600
 
 [spinBox]
 text=0
 value=0
 
-[usbSpectr_from]
-text=1400
-value=1400
+[andorCameraExposureAdaptive]
+text=Adaptive
+checked=true
 
-[usbSpectr_integr_time]
-text="0,00"
-value=0.01
+[calibr_wavelength_start]
+text=850
+value=850
 
-[usbSpectr_save_from]
-text="0,00"
+[pico_ChA_VRange]
+currentIndex=4
+
+[normXBlurSpin]
+text=850
 value=0
 
-[usbSpectr_save_to]
-text=3648
-value=3648
-
-[usbSpectr_to]
-text=1600
-value=1600
-
-[visibleOnlyCheck]
+[n_meas_laser_spectra_track_fast]
+text=Fast
 checked=false
-text=Visible Data Only
 
-[xGridCheck]
-checked=false
-text=Show X Grid
+[n_meas_laser_spectra_Z_end]
+text=850
+value=45
 
-[yGridCheck]
+[Pi_Z_move_to]
+text="35,000"
+value=35
+
+[laserPower_internal]
+text="2,63"
+value=2.63
+
+[Scan3D_min_distance]
+text=1
+value=1
+
+[n_meas_laser_spectra_track]
+text=track
+checked=true
+
+[meas_laser_spectra_step]
+text=10
+value=10
+
+[pico_TrigThreshold]
+text="0,020"
+value=0.02
+
+[n_meas_laser_spectra_Z_interface_optim]
+text=optimZ
+checked=true
+
+[readoutSources]
+currentIndex=0
+
+[raw_data_preview]
+text=preview
 checked=false
-text=Show Y Grid
+
+[meas_laser_spectra_track_fast]
+text=Fast
+checked=false
+
+[meas_laser_spectra_track_channel]
+currentIndex=0
+
+[n_meas_laser_spectra_Z_start]
+text="18,00"
+value=18
+
+[HWP_move_to_angle]
+text="5,0000"
+value=5
+
+[fastScan_time_delay]
+text="0,0000000000"
+value=0
+
+[meas_laser_spectra_track]
+text=track
+checked=false
+
+[HWP_stepper_wait]
+text=WaitUntilReady
+checked=true
+
+[fastScan_time_calibr]
+text="23,3130102098"
+value=23.3130102098
+
+[andorCameraLive]
+text=Live
+checked=false
+
+[pico_pretrig]
+text=0.0
+
+[confParam_scan_start]
+text="25,00"
+value=25
+
+[Pi_Z_On]
+text=Z
+checked=true
+
+[calibr_end]
+text="360,00"
+value=360
+
+[n_meas_laser_spectra_end]
+text=1200
+value=1200
+
+[Pi_wait]
+text=Wait
+checked=true
+
+[scan3D_maskSigma]
+text="0,90"
+value=0.9
+
+[pico_AutoRange]
+text=Auto Level:
+checked=true
+
+[scan3D_byMask]
+text=maskScan
+checked=true
+
+[scan3D_num_peaks]
+text=3
+value=3
+
+[laserShutter]
+text=Shutter
+checked=true
+
+[andorCameraReadoutMode]
+currentIndex=0
+
+[n_meas_laser_spectra_Z_offset]
+text="2,50"
+value=2.5
+
+[scan1D_step]
+text="0,200"
+value=0.2
+
+[shamrock_use_MOCO]
+text=ChangeFilterAt
+checked=false
+
+[mocoPosition]
+text=649927
+value=649927
+
+[DAQmx_shift]
+text=12
+value=12
+
+[pico_photon_counter_threshold]
+text=-0.001
+
+[pico_photon_counter]
+text=PC
+checked=false
+
+[pm100Average]
+text=850
+value=100
+
+[scan1D_end]
+text="45,00"
+value=45
+
+[Pi_Velocity]
+text="10000,00"
+value=10000
+
+[pico_AutoRange_max]
+text=-20000
+value=-20000
+
+[n_meas_laser_spectra_Z_interface_fit]
+text=fit
+checked=true
+
+[scan3D_maskThreshold]
+text="60,000"
+value=60
+
+[laserWavelength_to_set]
+text=975
+value=975
+
+[calibr_wavelength_end]
+text=1300
+value=1300
+
+[mocoSection]
+currentIndex=2
+
+[shamrockPort]
+currentIndex=0
+
+[n_meas_laser_spectra_filePath]
+text=./data/multiScan
+
+[fileNameEdit]
+text=975
+
+[lookInCombo]
+currentIndex=0
+
+[fileTypeCombo]
+currentIndex=0
