--- a/gui.ini
+++ b/gui.ini
@@ -1,6 +1,6 @@
 [General]
-text=255
-value=255
+text=0
+value=0
 HWP_stepper_angle=358
 currentIndex=0
 
@@ -13,7 +13,7 @@ text="0,00"
 value=0
 
 [qt_spinbox_lineedit]
-text=850x
+text=1
 
 [visibleOnlyCheck]
 text=Visible Data Only
@@ -28,7 +28,7 @@ text=Auto
 checked=true
 
 [minText]
-text=14.062
+text=130.5
 
 [pico_n_captures]
 text=1
@@ -58,8 +58,8 @@ text=Invert Axis
 checked=false
 
 [andorCameraExposure]
-text="1,00000"
-value=1
+text="0,05000"
+value=0.05
 
 [downsampleCheck]
 text=Downsample
@@ -105,11 +105,11 @@ text=2
 value=2
 
 [usbSpectr_integr_time]
-text="0,010"
+text=1
 value=0.01
 
 [usbSpectr_save_to]
-text=850
+text=3648
 value=3648
 
 [shamrockGrating]
@@ -120,8 +120,8 @@ text=Clip to View
 checked=false
 
 [laserWavelength]
-text=975
-value=975
+text=790
+value=790
 
 [pico_samplingDuration]
 text=100e-6
@@ -154,7 +154,7 @@ text="0,00"
 value=0
 
 [n_meas_laser_spectra_step]
-text=850
+text=5
 value=5
 
 [Pi_Y_move_to]
@@ -162,7 +162,7 @@ text="50,000"
 value=50
 
 [HWP_rel_step]
-text="5,00"
+text=1
 value=5
 
 [xGridCheck]
@@ -196,30 +196,30 @@ value=1200
 currentIndex=0
 
 [shamrockWavelength]
-text=400.0
+text=263.33331298828125
 
 [scan3D_threshold_rel]
 text="0,0500"
 value=0.05
 
 [confParam_scan_end]
-text="38,00"
-value=38
+text=1
+value=60
 
 [Pi_Y_On]
 text=Y
 checked=true
 
 [calibr_step]
-text="1,000"
+text=1
 value=1
 
 [n_meas_laser_spectra_start]
-text=850
-value=930
+text=720
+value=720
 
 [pico_ChA_offset]
-text="0,00"
+text=1
 value=0
 
 [normTimeRangeCheck]
@@ -234,14 +234,14 @@ text=900
 value=900
 
 [pico_ChB_VRange]
-currentIndex=5
+currentIndex=0
 
 [scanPolar_angle]
 text="360,00"
 value=360
 
 [usbSpectr_from]
-text=850
+text=1
 value=1400
 
 [pm100Live]
@@ -249,7 +249,7 @@ text=Live
 checked=false
 
 [HWP_stepper_step]
-text=850
+text=1
 value=0
 
 [usbSpectr_save_from]
@@ -261,7 +261,7 @@ text=ROI
 checked=false
 
 [rotPiezoStage_Step]
-text="10,00"
+text=1
 value=10
 
 [rotPiezoStage_wait]
@@ -270,18 +270,18 @@ checked=false
 
 [n_meas_laser_spectra_MOCO_PMT]
 text=MOCO_PMT
-checked=true
+checked=false
 
 [calibr_wavelength_step]
-text=10
-value=10
+text=1
+value=1
 
 [scan1D_filePath]
 text=./data/scan1D
 
 [confParam_scan_step]
-text="1,000"
-value=1
+text=1
+value=0.3
 
 [scan3D_path]
 text=./data/scan
@@ -294,27 +294,27 @@ text="0,00"
 value=0
 
 [pico_AutoRange_min]
-text=-200
+text=1
 value=-200
 
 [n_meas_laser_spectra_Z_step]
-text=850
+text="0,30"
 value=0.3
 
 [scan1D_start]
-text="15,00"
-value=15
+text="20,00"
+value=20
 
 [HWP_stepper_MoveTo]
 text="10,00"
 value=10
 
 [n_meas_laser_spectra_track_channel]
-currentIndex=1
+currentIndex=0
 
 [n_meas_laser_spectra_Z_interface]
-text="30,4567"
-value=30.4567
+text="38,6949"
+value=38.6949
 
 [pico_sampleInterval]
 text=2e-9
@@ -324,7 +324,7 @@ text="320,00"
 value=320
 
 [usbSpectr_to]
-text=850
+text=1
 value=1600
 
 [spinBox]
@@ -336,14 +336,14 @@ text=Adaptive
 checked=true
 
 [calibr_wavelength_start]
-text=850
-value=850
+text=780
+value=780
 
 [pico_ChA_VRange]
-currentIndex=4
+currentIndex=0
 
 [normXBlurSpin]
-text=850
+text=1
 value=0
 
 [n_meas_laser_spectra_track_fast]
@@ -351,16 +351,16 @@ text=Fast
 checked=false
 
 [n_meas_laser_spectra_Z_end]
-text=850
+text="45,00"
 value=45
 
 [Pi_Z_move_to]
-text="35,000"
-value=35
+text="38,000"
+value=38
 
 [laserPower_internal]
-text="2,63"
-value=2.63
+text="2,34"
+value=2.34
 
 [Scan3D_min_distance]
 text=1
@@ -383,11 +383,11 @@ text=optimZ
 checked=true
 
 [readoutSources]
-currentIndex=0
+currentIndex=1
 
 [raw_data_preview]
 text=preview
-checked=false
+checked=true
 
 [meas_laser_spectra_track_fast]
 text=Fast
@@ -401,8 +401,8 @@ text="18,00"
 value=18
 
 [HWP_move_to_angle]
-text="5,0000"
-value=5
+text="0,0000"
+value=0
 
 [fastScan_time_delay]
 text="0,0000000000"
@@ -428,15 +428,15 @@ checked=false
 text=0.0
 
 [confParam_scan_start]
-text="25,00"
-value=25
+text="20,00"
+value=20
 
 [Pi_Z_On]
 text=Z
 checked=true
 
 [calibr_end]
-text="360,00"
+text=1
 value=360
 
 [n_meas_laser_spectra_end]
@@ -457,11 +457,11 @@ checked=true
 
 [scan3D_byMask]
 text=maskScan
-checked=true
+checked=false
 
 [scan3D_num_peaks]
-text=3
-value=3
+text=1
+value=1
 
 [laserShutter]
 text=Shutter
@@ -471,20 +471,20 @@ checked=true
 currentIndex=0
 
 [n_meas_laser_spectra_Z_offset]
-text="2,50"
-value=2.5
+text="0,00"
+value=0
 
 [scan1D_step]
-text="0,200"
-value=0.2
+text="0,300"
+value=0.3
 
 [shamrock_use_MOCO]
 text=ChangeFilterAt
 checked=false
 
 [mocoPosition]
-text=649927
-value=649927
+text=650000
+value=650000
 
 [DAQmx_shift]
 text=12
@@ -498,19 +498,19 @@ text=PC
 checked=false
 
 [pm100Average]
-text=850
+text=100
 value=100
 
 [scan1D_end]
-text="45,00"
-value=45
+text="50,00"
+value=50
 
 [Pi_Velocity]
 text="10000,00"
 value=10000
 
 [pico_AutoRange_max]
-text=-20000
+text=1
 value=-20000
 
 [n_meas_laser_spectra_Z_interface_fit]
@@ -522,11 +522,11 @@ text="60,000"
 value=60
 
 [laserWavelength_to_set]
-text=975
-value=975
+text=790
+value=790
 
 [calibr_wavelength_end]
-text=1300
+text=1
 value=1300
 
 [mocoSection]
@@ -546,3 +546,7 @@ currentIndex=0
 
 [fileTypeCombo]
 currentIndex=0
+
+[optim1step_n]
+text=4
+value=4
