--- a/gui.ini
+++ b/gui.ini
@@ -9,11 +9,11 @@ text=Auto Pan Only
 checked=false
 
 [normYBlurSpin]
-text="0,00"
+text="23,3130102098"
 value=0
 
 [qt_spinbox_lineedit]
-text=1
+text="23,3130102098"
 
 [visibleOnlyCheck]
 text=Visible Data Only
@@ -28,7 +28,7 @@ text=Auto
 checked=true
 
 [minText]
-text=130.5
+text=119.32
 
 [pico_n_captures]
 text=1
@@ -51,15 +51,15 @@ text=Auto
 checked=false
 
 [maxText]
-text=37.901
+text=664.61
 
 [invertCheck]
 text=Invert Axis
 checked=false
 
 [andorCameraExposure]
-text="0,05000"
-value=0.05
+text="0,20000"
+value=0.2
 
 [downsampleCheck]
 text=Downsample
@@ -70,8 +70,8 @@ text=1x
 value=1
 
 [shamrockWavelength_to_set]
-text="400,00"
-value=400
+text="300,00"
+value=300
 
 [forgetTracesCheck]
 text=Forget hidden traces
@@ -97,19 +97,19 @@ text="0,00"
 value=0
 
 [Pi_X_move_to]
-text="50,000"
-value=50
+text="8,000"
+value=8
 
 [scan3D_maskStep]
 text=2
 value=2
 
 [usbSpectr_integr_time]
-text=1
+text="0,010"
 value=0.01
 
 [usbSpectr_save_to]
-text=3648
+text="23,3130102098"
 value=3648
 
 [shamrockGrating]
@@ -120,8 +120,8 @@ text=Clip to View
 checked=false
 
 [laserWavelength]
-text=790
-value=790
+text=800
+value=800
 
 [pico_samplingDuration]
 text=100e-6
@@ -138,7 +138,7 @@ checked=false
 currentIndex=0
 
 [maxTracesSpin]
-text=0
+text="23,3130102098"
 value=0
 
 [logYCheck]
@@ -158,11 +158,11 @@ text=5
 value=5
 
 [Pi_Y_move_to]
-text="50,000"
-value=50
+text="30,000"
+value=30
 
 [HWP_rel_step]
-text=1
+text="23,3130102098"
 value=5
 
 [xGridCheck]
@@ -183,7 +183,7 @@ value=0
 
 [n_meas_laser_spectra_FloatingWindow]
 text=FloatingWindow
-checked=true
+checked=false
 
 [scan1D_axis]
 currentIndex=2
@@ -196,14 +196,15 @@ value=1200
 currentIndex=0
 
 [shamrockWavelength]
-text=263.33331298828125
+text="300,0000"
+value=300
 
 [scan3D_threshold_rel]
-text="0,0500"
-value=0.05
+text="0,0001"
+value=0.0001
 
 [confParam_scan_end]
-text=1
+text="60,00"
 value=60
 
 [Pi_Y_On]
@@ -211,15 +212,15 @@ text=Y
 checked=true
 
 [calibr_step]
-text=1
+text="1,000"
 value=1
 
 [n_meas_laser_spectra_start]
-text=720
-value=720
+text=710
+value=710
 
 [pico_ChA_offset]
-text=1
+text="0,00"
 value=0
 
 [normTimeRangeCheck]
@@ -241,7 +242,7 @@ text="360,00"
 value=360
 
 [usbSpectr_from]
-text=1
+text=1400
 value=1400
 
 [pm100Live]
@@ -249,7 +250,7 @@ text=Live
 checked=false
 
 [HWP_stepper_step]
-text=1
+text="0,00"
 value=0
 
 [usbSpectr_save_from]
@@ -261,7 +262,7 @@ text=ROI
 checked=false
 
 [rotPiezoStage_Step]
-text=1
+text="10,00"
 value=10
 
 [rotPiezoStage_wait]
@@ -280,7 +281,7 @@ value=1
 text=./data/scan1D
 
 [confParam_scan_step]
-text=1
+text="0,300"
 value=0.3
 
 [scan3D_path]
@@ -294,7 +295,7 @@ text="0,00"
 value=0
 
 [pico_AutoRange_min]
-text=1
+text=-200
 value=-200
 
 [n_meas_laser_spectra_Z_step]
@@ -302,19 +303,19 @@ text="0,30"
 value=0.3
 
 [scan1D_start]
-text="20,00"
-value=20
+text="30,00"
+value=30
 
 [HWP_stepper_MoveTo]
 text="10,00"
 value=10
 
 [n_meas_laser_spectra_track_channel]
-currentIndex=0
+currentIndex=1
 
 [n_meas_laser_spectra_Z_interface]
-text="38,6949"
-value=38.6949
+text="45,8486"
+value=45.8486
 
 [pico_sampleInterval]
 text=2e-9
@@ -324,7 +325,7 @@ text="320,00"
 value=320
 
 [usbSpectr_to]
-text=1
+text=1600
 value=1600
 
 [spinBox]
@@ -343,7 +344,7 @@ value=780
 currentIndex=0
 
 [normXBlurSpin]
-text=1
+text="0,00"
 value=0
 
 [n_meas_laser_spectra_track_fast]
@@ -351,16 +352,16 @@ text=Fast
 checked=false
 
 [n_meas_laser_spectra_Z_end]
-text="45,00"
-value=45
+text="0,00"
+value=0
 
 [Pi_Z_move_to]
-text="38,000"
+text="23,3130102098"
 value=38
 
 [laserPower_internal]
-text="2,34"
-value=2.34
+text="2,38"
+value=2.38
 
 [Scan3D_min_distance]
 text=1
@@ -397,8 +398,8 @@ checked=false
 currentIndex=0
 
 [n_meas_laser_spectra_Z_start]
-text="18,00"
-value=18
+text="0,00"
+value=0
 
 [HWP_move_to_angle]
 text="0,0000"
@@ -436,12 +437,12 @@ text=Z
 checked=true
 
 [calibr_end]
-text=1
+text="360,00"
 value=360
 
 [n_meas_laser_spectra_end]
-text=1200
-value=1200
+text=1300
+value=1300
 
 [Pi_wait]
 text=Wait
@@ -483,11 +484,11 @@ text=ChangeFilterAt
 checked=false
 
 [mocoPosition]
-text=650000
-value=650000
+text=30000
+value=30000
 
 [DAQmx_shift]
-text=12
+text="23,3130102098"
 value=12
 
 [pico_photon_counter_threshold]
@@ -502,15 +503,15 @@ text=100
 value=100
 
 [scan1D_end]
-text="50,00"
-value=50
+text="55,00"
+value=55
 
 [Pi_Velocity]
-text="10000,00"
+text="23,3130102098"
 value=10000
 
 [pico_AutoRange_max]
-text=1
+text=-20000
 value=-20000
 
 [n_meas_laser_spectra_Z_interface_fit]
@@ -522,21 +523,21 @@ text="60,000"
 value=60
 
 [laserWavelength_to_set]
-text=790
-value=790
+text=800
+value=800
 
 [calibr_wavelength_end]
-text=1
+text=1300
 value=1300
 
 [mocoSection]
-currentIndex=2
+currentIndex=1
 
 [shamrockPort]
 currentIndex=0
 
 [n_meas_laser_spectra_filePath]
-text=./data/multiScan
+text=./data/multiScan_
 
 [fileNameEdit]
 text=975
@@ -550,3 +551,11 @@ currentIndex=0
 [optim1step_n]
 text=4
 value=4
+
+[n_meas_laser_spectra_rescan2D]
+text=rescan2D
+checked=false
+
+[n_meas_laser_spectra_scanSpectraExp]
+text="0,05000"
+value=0.05
