--- a/gui.ini
+++ b/gui.ini
@@ -1,7 +1,7 @@
 [General]
-text=0
-value=0
-HWP_stepper_angle=358
+text=144
+value=144
+HWP_stepper_angle=0
 currentIndex=0
 
 [autoPanCheck]
@@ -9,11 +9,11 @@ text=Auto Pan Only
 checked=false
 
 [normYBlurSpin]
-text="23,3130102098"
+text="0,00"
 value=0
 
 [qt_spinbox_lineedit]
-text="23,3130102098"
+text="0,00"
 
 [visibleOnlyCheck]
 text=Visible Data Only
@@ -58,20 +58,20 @@ text=Invert Axis
 checked=false
 
 [andorCameraExposure]
-text="0,20000"
-value=0.2
+text="0,00"
+value=0.01
 
 [downsampleCheck]
 text=Downsample
 checked=false
 
 [downsampleSpin]
-text=1x
+text="0,00"
 value=1
 
 [shamrockWavelength_to_set]
-text="300,00"
-value=300
+text="0,00"
+value=350
 
 [forgetTracesCheck]
 text=Forget hidden traces
@@ -109,7 +109,7 @@ text="0,010"
 value=0.01
 
 [usbSpectr_save_to]
-text="23,3130102098"
+text="0,00"
 value=3648
 
 [shamrockGrating]
@@ -120,8 +120,8 @@ text=Clip to View
 checked=false
 
 [laserWavelength]
-text=800
-value=800
+text=780
+value=780
 
 [pico_samplingDuration]
 text=100e-6
@@ -138,7 +138,7 @@ checked=false
 currentIndex=0
 
 [maxTracesSpin]
-text="23,3130102098"
+text=0
 value=0
 
 [logYCheck]
@@ -154,15 +154,15 @@ text="0,00"
 value=0
 
 [n_meas_laser_spectra_step]
-text=5
+text="0,00"
 value=5
 
 [Pi_Y_move_to]
-text="30,000"
+text="0,00"
 value=30
 
 [HWP_rel_step]
-text="23,3130102098"
+text="5,00"
 value=5
 
 [xGridCheck]
@@ -196,27 +196,27 @@ value=1200
 currentIndex=0
 
 [shamrockWavelength]
-text="300,0000"
-value=300
+text="541,6667"
+value=541.6667
 
 [scan3D_threshold_rel]
-text="0,0001"
+text="0,00"
 value=0.0001
 
 [confParam_scan_end]
-text="60,00"
-value=60
+text="80,00"
+value=80
 
 [Pi_Y_On]
 text=Y
 checked=true
 
 [calibr_step]
-text="1,000"
-value=1
+text="47,000"
+value=47
 
 [n_meas_laser_spectra_start]
-text=710
+text="0,00"
 value=710
 
 [pico_ChA_offset]
@@ -231,11 +231,11 @@ checked=false
 currentIndex=0
 
 [meas_laser_spectra_start]
-text=900
+text="0,00"
 value=900
 
 [pico_ChB_VRange]
-currentIndex=0
+currentIndex=4
 
 [scanPolar_angle]
 text="360,00"
@@ -254,7 +254,7 @@ text="0,00"
 value=0
 
 [usbSpectr_save_from]
-text=0
+text="0,00"
 value=0
 
 [normROICheck]
@@ -262,7 +262,7 @@ text=ROI
 checked=false
 
 [rotPiezoStage_Step]
-text="10,00"
+text="0,00"
 value=10
 
 [rotPiezoStage_wait]
@@ -274,15 +274,15 @@ text=MOCO_PMT
 checked=false
 
 [calibr_wavelength_step]
-text=1
-value=1
+text=10
+value=10
 
 [scan1D_filePath]
 text=./data/scan1D
 
 [confParam_scan_step]
-text="0,300"
-value=0.3
+text="0,500"
+value=0.5
 
 [scan3D_path]
 text=./data/scan
@@ -299,12 +299,12 @@ text=-200
 value=-200
 
 [n_meas_laser_spectra_Z_step]
-text="0,30"
+text="0,00"
 value=0.3
 
 [scan1D_start]
-text="30,00"
-value=30
+text="0,00"
+value=20
 
 [HWP_stepper_MoveTo]
 text="10,00"
@@ -321,15 +321,15 @@ value=45.8486
 text=2e-9
 
 [shamrock_MOCO_limit]
-text="320,00"
+text="0,00"
 value=320
 
 [usbSpectr_to]
-text=1600
+text="0,00"
 value=1600
 
 [spinBox]
-text=0
+text="0,00"
 value=0
 
 [andorCameraExposureAdaptive]
@@ -337,11 +337,11 @@ text=Adaptive
 checked=true
 
 [calibr_wavelength_start]
-text=780
-value=780
+text=710
+value=710
 
 [pico_ChA_VRange]
-currentIndex=0
+currentIndex=2
 
 [normXBlurSpin]
 text="0,00"
@@ -356,12 +356,12 @@ text="0,00"
 value=0
 
 [Pi_Z_move_to]
-text="23,3130102098"
+text="38,000"
 value=38
 
 [laserPower_internal]
-text="2,38"
-value=2.38
+text="2,30"
+value=2.3
 
 [Scan3D_min_distance]
 text=1
@@ -372,7 +372,7 @@ text=track
 checked=true
 
 [meas_laser_spectra_step]
-text=10
+text="0,00"
 value=10
 
 [pico_TrigThreshold]
@@ -402,11 +402,11 @@ text="0,00"
 value=0
 
 [HWP_move_to_angle]
-text="0,0000"
-value=0
+text="47,0000"
+value=47
 
 [fastScan_time_delay]
-text="0,0000000000"
+text="0,00"
 value=0
 
 [meas_laser_spectra_track]
@@ -418,8 +418,8 @@ text=WaitUntilReady
 checked=true
 
 [fastScan_time_calibr]
-text="23,3130102098"
-value=23.3130102098
+text="11,9418678203"
+value=11.9418678203
 
 [andorCameraLive]
 text=Live
@@ -437,8 +437,8 @@ text=Z
 checked=true
 
 [calibr_end]
-text="360,00"
-value=360
+text="47,00"
+value=47
 
 [n_meas_laser_spectra_end]
 text=1300
@@ -449,7 +449,7 @@ text=Wait
 checked=true
 
 [scan3D_maskSigma]
-text="0,90"
+text="0,00"
 value=0.9
 
 [pico_AutoRange]
@@ -476,19 +476,19 @@ text="0,00"
 value=0
 
 [scan1D_step]
-text="0,300"
-value=0.3
+text="1,000"
+value=1
 
 [shamrock_use_MOCO]
 text=ChangeFilterAt
 checked=false
 
 [mocoPosition]
-text=30000
-value=30000
+text="0,00"
+value=650000
 
 [DAQmx_shift]
-text="23,3130102098"
+text="0,00"
 value=12
 
 [pico_photon_counter_threshold]
@@ -499,15 +499,15 @@ text=PC
 checked=false
 
 [pm100Average]
-text=100
-value=100
+text=10
+value=10
 
 [scan1D_end]
-text="55,00"
-value=55
+text="0,00"
+value=80
 
 [Pi_Velocity]
-text="23,3130102098"
+text="10000,00"
 value=10000
 
 [pico_AutoRange_max]
@@ -523,15 +523,15 @@ text="60,000"
 value=60
 
 [laserWavelength_to_set]
-text=800
-value=800
+text=780
+value=780
 
 [calibr_wavelength_end]
 text=1300
 value=1300
 
 [mocoSection]
-currentIndex=1
+currentIndex=2
 
 [shamrockPort]
 currentIndex=0
@@ -557,5 +557,8 @@ text=rescan2D
 checked=false
 
 [n_meas_laser_spectra_scanSpectraExp]
-text="0,05000"
+text="0,00"
 value=0.05
+
+[powerCalibrMode]
+currentIndex=0
