--- a/gui.ini
+++ b/gui.ini
@@ -1,8 +1,8 @@
 [General]
-text=144
-value=144
+text=0
+value=0
 HWP_stepper_angle=0
-currentIndex=0
+currentIndex=2
 
 [autoPanCheck]
 text=Auto Pan Only
@@ -28,7 +28,7 @@ text=Auto
 checked=true
 
 [minText]
-text=119.32
+text=-30.59
 
 [pico_n_captures]
 text=1
@@ -51,27 +51,27 @@ text=Auto
 checked=false
 
 [maxText]
-text=664.61
+text=61.142
 
 [invertCheck]
 text=Invert Axis
 checked=false
 
 [andorCameraExposure]
-text="0,00"
-value=0.01
+text="2,00000"
+value=2
 
 [downsampleCheck]
 text=Downsample
 checked=false
 
 [downsampleSpin]
-text="0,00"
+text=1x
 value=1
 
 [shamrockWavelength_to_set]
-text="0,00"
-value=350
+text="400,00"
+value=400
 
 [forgetTracesCheck]
 text=Forget hidden traces
@@ -97,7 +97,7 @@ text="0,00"
 value=0
 
 [Pi_X_move_to]
-text="8,000"
+text="0,00"
 value=8
 
 [scan3D_maskStep]
@@ -105,7 +105,7 @@ text=2
 value=2
 
 [usbSpectr_integr_time]
-text="0,010"
+text="0,00"
 value=0.01
 
 [usbSpectr_save_to]
@@ -120,8 +120,8 @@ text=Clip to View
 checked=false
 
 [laserWavelength]
-text=780
-value=780
+text=870
+value=870
 
 [pico_samplingDuration]
 text=100e-6
@@ -154,11 +154,11 @@ text="0,00"
 value=0
 
 [n_meas_laser_spectra_step]
-text="0,00"
+text=5
 value=5
 
 [Pi_Y_move_to]
-text="0,00"
+text="30,000"
 value=30
 
 [HWP_rel_step]
@@ -170,7 +170,7 @@ text=Show X Grid
 checked=true
 
 [mocoMoveAbs_target]
-text=0
+text="0,00"
 value=0
 
 [Pi_X_On]
@@ -196,12 +196,12 @@ value=1200
 currentIndex=0
 
 [shamrockWavelength]
-text="541,6667"
-value=541.6667
+text="362,5000"
+value=362.5
 
 [scan3D_threshold_rel]
-text="0,00"
-value=0.0001
+text="0,0100"
+value=0.01
 
 [confParam_scan_end]
 text="80,00"
@@ -212,12 +212,12 @@ text=Y
 checked=true
 
 [calibr_step]
-text="47,000"
-value=47
+text="0,00"
+value=5
 
 [n_meas_laser_spectra_start]
-text="0,00"
-value=710
+text=800
+value=800
 
 [pico_ChA_offset]
 text="0,00"
@@ -231,7 +231,7 @@ checked=false
 currentIndex=0
 
 [meas_laser_spectra_start]
-text="0,00"
+text=900
 value=900
 
 [pico_ChB_VRange]
@@ -242,7 +242,7 @@ text="360,00"
 value=360
 
 [usbSpectr_from]
-text=1400
+text="0,00"
 value=1400
 
 [pm100Live]
@@ -254,7 +254,7 @@ text="0,00"
 value=0
 
 [usbSpectr_save_from]
-text="0,00"
+text=0
 value=0
 
 [normROICheck]
@@ -262,7 +262,7 @@ text=ROI
 checked=false
 
 [rotPiezoStage_Step]
-text="0,00"
+text="10,00"
 value=10
 
 [rotPiezoStage_wait]
@@ -274,8 +274,8 @@ text=MOCO_PMT
 checked=false
 
 [calibr_wavelength_step]
-text=10
-value=10
+text=1
+value=1
 
 [scan1D_filePath]
 text=./data/scan1D
@@ -299,29 +299,29 @@ text=-200
 value=-200
 
 [n_meas_laser_spectra_Z_step]
-text="0,00"
+text="0,30"
 value=0.3
 
 [scan1D_start]
-text="0,00"
-value=20
+text="25,00"
+value=25
 
 [HWP_stepper_MoveTo]
 text="10,00"
 value=10
 
 [n_meas_laser_spectra_track_channel]
-currentIndex=1
+currentIndex=0
 
 [n_meas_laser_spectra_Z_interface]
-text="45,8486"
-value=45.8486
+text="39,8630"
+value=39.863
 
 [pico_sampleInterval]
 text=2e-9
 
 [shamrock_MOCO_limit]
-text="0,00"
+text="320,00"
 value=320
 
 [usbSpectr_to]
@@ -360,8 +360,8 @@ text="38,000"
 value=38
 
 [laserPower_internal]
-text="2,30"
-value=2.3
+text="2,73"
+value=2.73
 
 [Scan3D_min_distance]
 text=1
@@ -372,7 +372,7 @@ text=track
 checked=true
 
 [meas_laser_spectra_step]
-text="0,00"
+text=10
 value=10
 
 [pico_TrigThreshold]
@@ -402,11 +402,11 @@ text="0,00"
 value=0
 
 [HWP_move_to_angle]
-text="47,0000"
-value=47
+text="0,00"
+value=115
 
 [fastScan_time_delay]
-text="0,00"
+text="0,0000000000"
 value=0
 
 [meas_laser_spectra_track]
@@ -437,8 +437,8 @@ text=Z
 checked=true
 
 [calibr_end]
-text="47,00"
-value=47
+text="0,00"
+value=360
 
 [n_meas_laser_spectra_end]
 text=1300
@@ -449,7 +449,7 @@ text=Wait
 checked=true
 
 [scan3D_maskSigma]
-text="0,00"
+text="0,90"
 value=0.9
 
 [pico_AutoRange]
@@ -461,12 +461,12 @@ text=maskScan
 checked=false
 
 [scan3D_num_peaks]
-text=1
-value=1
+text=2
+value=2
 
 [laserShutter]
 text=Shutter
-checked=true
+checked=false
 
 [andorCameraReadoutMode]
 currentIndex=0
@@ -476,16 +476,16 @@ text="0,00"
 value=0
 
 [scan1D_step]
-text="1,000"
-value=1
+text="0,300"
+value=0.3
 
 [shamrock_use_MOCO]
 text=ChangeFilterAt
 checked=false
 
 [mocoPosition]
-text="0,00"
-value=650000
+text=650067
+value=650067
 
 [DAQmx_shift]
 text="0,00"
@@ -503,8 +503,8 @@ text=10
 value=10
 
 [scan1D_end]
-text="0,00"
-value=80
+text="55,00"
+value=55
 
 [Pi_Velocity]
 text="10000,00"
@@ -523,12 +523,12 @@ text="60,000"
 value=60
 
 [laserWavelength_to_set]
-text=780
-value=780
+text=870
+value=870
 
 [calibr_wavelength_end]
-text=1300
-value=1300
+text=711
+value=711
 
 [mocoSection]
 currentIndex=2
@@ -540,7 +540,7 @@ currentIndex=0
 text=./data/multiScan_
 
 [fileNameEdit]
-text=975
+text=andor_HgLamp_400.csv
 
 [lookInCombo]
 currentIndex=0
@@ -549,16 +549,24 @@ currentIndex=0
 currentIndex=0
 
 [optim1step_n]
-text=4
-value=4
+text=3
+value=3
 
 [n_meas_laser_spectra_rescan2D]
 text=rescan2D
 checked=false
 
 [n_meas_laser_spectra_scanSpectraExp]
-text="0,00"
+text="0,05000"
 value=0.05
 
 [powerCalibrMode]
 currentIndex=0
+
+[optim1step_zCompensation]
+text=zCompensation
+checked=true
+
+[optim1step_zCompensationShift]
+text="13,454"
+value=13.454
