--- a/gui.ini
+++ b/gui.ini
@@ -2,18 +2,18 @@
 text=0
 value=0
 HWP_stepper_angle=0
-currentIndex=2
+currentIndex=1
 
 [autoPanCheck]
 text=Auto Pan Only
 checked=false
 
 [normYBlurSpin]
-text="0,00"
+text=1x
 value=0
 
 [qt_spinbox_lineedit]
-text="0,00"
+text=1x
 
 [visibleOnlyCheck]
 text=Visible Data Only
@@ -35,7 +35,7 @@ text=1
 value=1
 
 [fastScan_time_cutoff]
-text="0,0000000000"
+text=1x
 value=0
 
 [autoPercentSpin]
@@ -51,15 +51,15 @@ text=Auto
 checked=false
 
 [maxText]
-text=61.142
+text=710.9
 
 [invertCheck]
 text=Invert Axis
 checked=false
 
 [andorCameraExposure]
-text="2,00000"
-value=2
+text="0,01000"
+value=0.01
 
 [downsampleCheck]
 text=Downsample
@@ -97,7 +97,7 @@ text="0,00"
 value=0
 
 [Pi_X_move_to]
-text="0,00"
+text=1x
 value=8
 
 [scan3D_maskStep]
@@ -105,11 +105,11 @@ text=2
 value=2
 
 [usbSpectr_integr_time]
-text="0,00"
+text="0,010"
 value=0.01
 
 [usbSpectr_save_to]
-text="0,00"
+text=3648
 value=3648
 
 [shamrockGrating]
@@ -120,8 +120,8 @@ text=Clip to View
 checked=false
 
 [laserWavelength]
-text=870
-value=870
+text=1064
+value=1064
 
 [pico_samplingDuration]
 text=100e-6
@@ -150,7 +150,7 @@ text=Power Spectrum (FFT)
 checked=false
 
 [calibr_start]
-text="0,00"
+text=1x
 value=0
 
 [n_meas_laser_spectra_step]
@@ -170,7 +170,7 @@ text=Show X Grid
 checked=true
 
 [mocoMoveAbs_target]
-text="0,00"
+text=0
 value=0
 
 [Pi_X_On]
@@ -178,7 +178,7 @@ text=X
 checked=true
 
 [normTBlurSpin]
-text="0,00"
+text=1x
 value=0
 
 [n_meas_laser_spectra_FloatingWindow]
@@ -196,15 +196,15 @@ value=1200
 currentIndex=0
 
 [shamrockWavelength]
-text="362,5000"
-value=362.5
+text="355,0000"
+value=355
 
 [scan3D_threshold_rel]
-text="0,0100"
+text=1x
 value=0.01
 
 [confParam_scan_end]
-text="80,00"
+text=1x
 value=80
 
 [Pi_Y_On]
@@ -212,7 +212,7 @@ text=Y
 checked=true
 
 [calibr_step]
-text="0,00"
+text="5,000"
 value=5
 
 [n_meas_laser_spectra_start]
@@ -242,7 +242,7 @@ text="360,00"
 value=360
 
 [usbSpectr_from]
-text="0,00"
+text=1400
 value=1400
 
 [pm100Live]
@@ -254,7 +254,7 @@ text="0,00"
 value=0
 
 [usbSpectr_save_from]
-text=0
+text=1x
 value=0
 
 [normROICheck]
@@ -262,7 +262,7 @@ text=ROI
 checked=false
 
 [rotPiezoStage_Step]
-text="10,00"
+text=1x
 value=10
 
 [rotPiezoStage_wait]
@@ -303,12 +303,12 @@ text="0,30"
 value=0.3
 
 [scan1D_start]
-text="25,00"
-value=25
+text="20,00"
+value=20
 
 [HWP_stepper_MoveTo]
-text="10,00"
-value=10
+text="0,00"
+value=0
 
 [n_meas_laser_spectra_track_channel]
 currentIndex=0
@@ -325,11 +325,11 @@ text="320,00"
 value=320
 
 [usbSpectr_to]
-text="0,00"
+text=1x
 value=1600
 
 [spinBox]
-text="0,00"
+text=0
 value=0
 
 [andorCameraExposureAdaptive]
@@ -337,7 +337,7 @@ text=Adaptive
 checked=true
 
 [calibr_wavelength_start]
-text=710
+text=1x
 value=710
 
 [pico_ChA_VRange]
@@ -356,15 +356,15 @@ text="0,00"
 value=0
 
 [Pi_Z_move_to]
-text="38,000"
+text=1x
 value=38
 
 [laserPower_internal]
-text="2,73"
-value=2.73
+text="2,50"
+value=2.5
 
 [Scan3D_min_distance]
-text=1
+text=1x
 value=1
 
 [n_meas_laser_spectra_track]
@@ -402,8 +402,8 @@ text="0,00"
 value=0
 
 [HWP_move_to_angle]
-text="0,00"
-value=115
+text="100,0000"
+value=100
 
 [fastScan_time_delay]
 text="0,0000000000"
@@ -437,7 +437,7 @@ text=Z
 checked=true
 
 [calibr_end]
-text="0,00"
+text="360,00"
 value=360
 
 [n_meas_laser_spectra_end]
@@ -449,7 +449,7 @@ text=Wait
 checked=true
 
 [scan3D_maskSigma]
-text="0,90"
+text=1x
 value=0.9
 
 [pico_AutoRange]
@@ -466,7 +466,7 @@ value=2
 
 [laserShutter]
 text=Shutter
-checked=false
+checked=true
 
 [andorCameraReadoutMode]
 currentIndex=0
@@ -484,11 +484,11 @@ text=ChangeFilterAt
 checked=false
 
 [mocoPosition]
-text=650067
-value=650067
+text=1450076
+value=1450076
 
 [DAQmx_shift]
-text="0,00"
+text=12
 value=12
 
 [pico_photon_counter_threshold]
@@ -499,15 +499,15 @@ text=PC
 checked=false
 
 [pm100Average]
-text=10
+text=1x
 value=10
 
 [scan1D_end]
-text="55,00"
-value=55
+text="60,00"
+value=60
 
 [Pi_Velocity]
-text="10000,00"
+text=1x
 value=10000
 
 [pico_AutoRange_max]
@@ -523,15 +523,15 @@ text="60,000"
 value=60
 
 [laserWavelength_to_set]
-text=870
-value=870
+text=1064
+value=1064
 
 [calibr_wavelength_end]
-text=711
+text=1x
 value=711
 
 [mocoSection]
-currentIndex=2
+currentIndex=3
 
 [shamrockPort]
 currentIndex=0
@@ -549,8 +549,8 @@ currentIndex=0
 currentIndex=0
 
 [optim1step_n]
-text=3
-value=3
+text=4
+value=4
 
 [n_meas_laser_spectra_rescan2D]
 text=rescan2D
@@ -565,8 +565,101 @@ currentIndex=0
 
 [optim1step_zCompensation]
 text=zCompensation
-checked=true
+checked=false
 
 [optim1step_zCompensationShift]
-text="13,454"
-value=13.454
+text="5,752"
+value=5.752
+
+[nMeasLaserSpectra_Z_step]
+text=1x
+value=0.3
+
+[nMeasLaserSpectra_step]
+text=5
+value=5
+
+[nMeasLaserSpectra_testPolar_step]
+text=1x
+value=10
+
+[nMeasLaserSpectra_Z_interface]
+text="50,8590"
+value=50.859
+
+[nMeasLaserSpectra_track]
+text=track
+checked=true
+
+[nMeasLaserSpectra_filePath]
+text=./data/multiScan
+
+[nMeasLaserSpectra_start]
+text=710
+value=710
+
+[nMeasLaserSpectra_rescan2D]
+text=rescan2D
+checked=false
+
+[nMeasLaserSpectra_track_channel]
+currentIndex=1
+
+[nMeasLaserSpectra_Z_offset]
+text="0,00"
+value=0
+
+[nMeasLaserSpectra_scanSpectraExp]
+text=1x
+value=0.05
+
+[nMeasLaserSpectra_testPolar_end]
+text="190,00"
+value=190
+
+[nMeasLaserSpectra_Z_interface_fit]
+text=fit
+checked=true
+
+[nMeasLaserSpectra_track_fast]
+text=Fast
+checked=false
+
+[nMeasLaserSpectra_testPolar]
+text=TestPolarization
+checked=true
+
+[nMeasLaserSpectra_end]
+text=1x
+value=1300
+
+[nMeasLaserSpectra_Z_end]
+text=1x
+value=1
+
+[nMeasLaserSpectra_Z_interface_optim]
+text=optimZ
+checked=true
+
+[nMeasLaserSpectra_FloatingWindow]
+text=FloatingWindow
+checked=false
+
+[nMeasLaserSpectra_testPolarFreq]
+text=1x
+value=2
+
+[nMeasLaserSpectra_Z_start]
+text=1x
+value=0
+
+[nMeasLaserSpectra_testPolar_start]
+text="0,01"
+value=0.01
+
+[nMeasLaserSpectra_testPolarMode]
+currentIndex=0
+
+[nMeasLaserSpectra_MOCO_PMT]
+text=MOCO_PMT
+checked=false
