--- a/gui.ini
+++ b/gui.ini
@@ -1,19 +1,19 @@
 [General]
 text=0
 value=0
-HWP_stepper_angle=0
-currentIndex=1
+HWP_stepper_angle=160
+currentIndex=2
 
 [autoPanCheck]
 text=Auto Pan Only
 checked=false
 
 [normYBlurSpin]
-text=1x
+text="0,00"
 value=0
 
 [qt_spinbox_lineedit]
-text=1x
+text="1,92"
 
 [visibleOnlyCheck]
 text=Visible Data Only
@@ -35,7 +35,7 @@ text=1
 value=1
 
 [fastScan_time_cutoff]
-text=1x
+text="0,0000000000"
 value=0
 
 [autoPercentSpin]
@@ -58,8 +58,8 @@ text=Invert Axis
 checked=false
 
 [andorCameraExposure]
-text="0,01000"
-value=0.01
+text="0,02000"
+value=0.02
 
 [downsampleCheck]
 text=Downsample
@@ -97,7 +97,7 @@ text="0,00"
 value=0
 
 [Pi_X_move_to]
-text=1x
+text="1,92"
 value=8
 
 [scan3D_maskStep]
@@ -105,7 +105,7 @@ text=2
 value=2
 
 [usbSpectr_integr_time]
-text="0,010"
+text="1,92"
 value=0.01
 
 [usbSpectr_save_to]
@@ -120,8 +120,8 @@ text=Clip to View
 checked=false
 
 [laserWavelength]
-text=1064
-value=1064
+text=1100
+value=1100
 
 [pico_samplingDuration]
 text=100e-6
@@ -150,7 +150,7 @@ text=Power Spectrum (FFT)
 checked=false
 
 [calibr_start]
-text=1x
+text="0,00"
 value=0
 
 [n_meas_laser_spectra_step]
@@ -162,7 +162,7 @@ text="30,000"
 value=30
 
 [HWP_rel_step]
-text="5,00"
+text="1,92"
 value=5
 
 [xGridCheck]
@@ -178,7 +178,7 @@ text=X
 checked=true
 
 [normTBlurSpin]
-text=1x
+text="1,92"
 value=0
 
 [n_meas_laser_spectra_FloatingWindow]
@@ -189,22 +189,22 @@ checked=false
 currentIndex=2
 
 [meas_laser_spectra_end]
-text=1200
+text="1,92"
 value=1200
 
 [pico_Trig_mode]
 currentIndex=0
 
 [shamrockWavelength]
-text="355,0000"
-value=355
+text="458,3333"
+value=458.3333
 
 [scan3D_threshold_rel]
-text=1x
+text="0,0100"
 value=0.01
 
 [confParam_scan_end]
-text=1x
+text="80,00"
 value=80
 
 [Pi_Y_On]
@@ -212,7 +212,7 @@ text=Y
 checked=true
 
 [calibr_step]
-text="5,000"
+text="1,92"
 value=5
 
 [n_meas_laser_spectra_start]
@@ -235,10 +235,10 @@ text=900
 value=900
 
 [pico_ChB_VRange]
-currentIndex=4
+currentIndex=5
 
 [scanPolar_angle]
-text="360,00"
+text="1,92"
 value=360
 
 [usbSpectr_from]
@@ -254,7 +254,7 @@ text="0,00"
 value=0
 
 [usbSpectr_save_from]
-text=1x
+text=0
 value=0
 
 [normROICheck]
@@ -262,7 +262,7 @@ text=ROI
 checked=false
 
 [rotPiezoStage_Step]
-text=1x
+text="10,00"
 value=10
 
 [rotPiezoStage_wait]
@@ -274,14 +274,14 @@ text=MOCO_PMT
 checked=false
 
 [calibr_wavelength_step]
-text=1
+text="1,92"
 value=1
 
 [scan1D_filePath]
 text=./data/scan1D
 
 [confParam_scan_step]
-text="0,500"
+text="1,92"
 value=0.5
 
 [scan3D_path]
@@ -303,7 +303,7 @@ text="0,30"
 value=0.3
 
 [scan1D_start]
-text="20,00"
+text="1,92"
 value=20
 
 [HWP_stepper_MoveTo]
@@ -325,7 +325,7 @@ text="320,00"
 value=320
 
 [usbSpectr_to]
-text=1x
+text=1600
 value=1600
 
 [spinBox]
@@ -337,11 +337,11 @@ text=Adaptive
 checked=true
 
 [calibr_wavelength_start]
-text=1x
+text="1,92"
 value=710
 
 [pico_ChA_VRange]
-currentIndex=2
+currentIndex=3
 
 [normXBlurSpin]
 text="0,00"
@@ -356,15 +356,15 @@ text="0,00"
 value=0
 
 [Pi_Z_move_to]
-text=1x
+text="1,92"
 value=38
 
 [laserPower_internal]
-text="2,50"
-value=2.5
+text="2,47"
+value=2.47
 
 [Scan3D_min_distance]
-text=1x
+text=1
 value=1
 
 [n_meas_laser_spectra_track]
@@ -372,7 +372,7 @@ text=track
 checked=true
 
 [meas_laser_spectra_step]
-text=10
+text="1,92"
 value=10
 
 [pico_TrigThreshold]
@@ -402,7 +402,7 @@ text="0,00"
 value=0
 
 [HWP_move_to_angle]
-text="100,0000"
+text="1,92"
 value=100
 
 [fastScan_time_delay]
@@ -418,8 +418,8 @@ text=WaitUntilReady
 checked=true
 
 [fastScan_time_calibr]
-text="11,9418678203"
-value=11.9418678203
+text="10,9596105275"
+value=10.9596105275
 
 [andorCameraLive]
 text=Live
@@ -429,7 +429,7 @@ checked=false
 text=0.0
 
 [confParam_scan_start]
-text="20,00"
+text="1,92"
 value=20
 
 [Pi_Z_On]
@@ -449,7 +449,7 @@ text=Wait
 checked=true
 
 [scan3D_maskSigma]
-text=1x
+text="0,90"
 value=0.9
 
 [pico_AutoRange]
@@ -466,7 +466,7 @@ value=2
 
 [laserShutter]
 text=Shutter
-checked=true
+checked=false
 
 [andorCameraReadoutMode]
 currentIndex=0
@@ -484,11 +484,11 @@ text=ChangeFilterAt
 checked=false
 
 [mocoPosition]
-text=1450076
-value=1450076
+text=650000
+value=650000
 
 [DAQmx_shift]
-text=12
+text="1,92"
 value=12
 
 [pico_photon_counter_threshold]
@@ -499,7 +499,7 @@ text=PC
 checked=false
 
 [pm100Average]
-text=1x
+text=10
 value=10
 
 [scan1D_end]
@@ -507,7 +507,7 @@ text="60,00"
 value=60
 
 [Pi_Velocity]
-text=1x
+text="1,92"
 value=10000
 
 [pico_AutoRange_max]
@@ -523,15 +523,15 @@ text="60,000"
 value=60
 
 [laserWavelength_to_set]
-text=1064
-value=1064
+text="1,92"
+value=1235
 
 [calibr_wavelength_end]
-text=1x
+text="1,92"
 value=711
 
 [mocoSection]
-currentIndex=3
+currentIndex=2
 
 [shamrockPort]
 currentIndex=0
@@ -549,8 +549,8 @@ currentIndex=0
 currentIndex=0
 
 [optim1step_n]
-text=4
-value=4
+text=7
+value=7
 
 [n_meas_laser_spectra_rescan2D]
 text=rescan2D
@@ -568,11 +568,11 @@ text=zCompensation
 checked=false
 
 [optim1step_zCompensationShift]
-text="5,752"
-value=5.752
+text="9,131"
+value=9.131
 
 [nMeasLaserSpectra_Z_step]
-text=1x
+text="0,30"
 value=0.3
 
 [nMeasLaserSpectra_step]
@@ -580,12 +580,12 @@ text=5
 value=5
 
 [nMeasLaserSpectra_testPolar_step]
-text=1x
+text="10,00"
 value=10
 
 [nMeasLaserSpectra_Z_interface]
-text="50,8590"
-value=50.859
+text="47,5729"
+value=47.5729
 
 [nMeasLaserSpectra_track]
 text=track
@@ -595,8 +595,8 @@ checked=true
 text=./data/multiScan
 
 [nMeasLaserSpectra_start]
-text=710
-value=710
+text=1250
+value=1250
 
 [nMeasLaserSpectra_rescan2D]
 text=rescan2D
@@ -606,15 +606,15 @@ checked=false
 currentIndex=1
 
 [nMeasLaserSpectra_Z_offset]
-text="0,00"
+text="1,92"
 value=0
 
 [nMeasLaserSpectra_scanSpectraExp]
-text=1x
-value=0.05
+text="0,03000"
+value=0.03
 
 [nMeasLaserSpectra_testPolar_end]
-text="190,00"
+text="1,92"
 value=190
 
 [nMeasLaserSpectra_Z_interface_fit]
@@ -630,11 +630,11 @@ text=TestPolarization
 checked=true
 
 [nMeasLaserSpectra_end]
-text=1x
-value=1300
+text=710
+value=710
 
 [nMeasLaserSpectra_Z_end]
-text=1x
+text="1,92"
 value=1
 
 [nMeasLaserSpectra_Z_interface_optim]
@@ -646,15 +646,15 @@ text=FloatingWindow
 checked=false
 
 [nMeasLaserSpectra_testPolarFreq]
-text=1x
-value=2
+text="1,92"
+value=3
 
 [nMeasLaserSpectra_Z_start]
-text=1x
+text="0,00"
 value=0
 
 [nMeasLaserSpectra_testPolar_start]
-text="0,01"
+text="1,92"
 value=0.01
 
 [nMeasLaserSpectra_testPolarMode]
